fixes and aligning

--- a/src/app/overview/gantt-advanced/component/flat.scss
+++ b/src/app/overview/gantt-advanced/component/flat.scss
@@ -20,14 +20,14 @@
     //     }
     // }
 
-    .gantt-main-group {
-        border-bottom: 1px solid #eee;
-        padding: 15px 0;
+    // .gantt-main-group {
+    //     border-bottom: 1px solid #eee;
+    //     padding: 15px 0;
 
         .gantt-flat-items {
             position: relative;
         }
-    }
+    // }
 }
 
 .manager-search--photo {
